clang/test/BSC/Positive/Trait/Serialization/typedef_trait_with_serialization/typedef_trait_with_serialization.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

// Test with serialization:
// RUN: %clang_cc1 -triple x86_64-unknown-unknown -emit-pch -o %t %s
// RUN: %clang_cc1 -x bsc -triple x86_64-unknown-unknown -include-pch %t -ast-dump-all /dev/null \
// RUN: | sed -e "s/ <undeserialized declarations>//" -e "s/ imported//" \
// RUN: | FileCheck --strict-whitespace %s

typedef _Trait F {
    int foo(This* this, int a);
}G;
// CHECK: RecordDecl 0x{{[^ ]*}} <{{.*}}:[[@LINE-3]]:9, col:16> col:16 struct __Trait_F_Vtable definition
// CHECK-NEXT: FieldDecl 0x{{[^ ]*}} <line:[[@LINE-3]]:5, col:30> col:30 referenced foo 'int (*)(void *, int)'
// CHECK-NEXT: RecordDecl 0x{{[^ ]*}} <line:[[@LINE-5]]:9, col:16> col:16 struct __Trait_F definition
// CHECK-NEXT: FieldDecl 0x{{[^ ]*}} <col:9, col:16> col:16 referenced data 'void *'
// CHECK-NEXT: FieldDecl 0x{{[^ ]*}} <col:9, col:16> col:16 referenced vtable 'struct __Trait_F_Vtable *

int int::foo(int *this, int a) {
    return *this + a;
}

_Impl G for int;
// CHECK: VarDecl 0x{{[^ ]*}} <line:[[@LINE-1]]:7, col:13> col:13 __int_trait_F 'struct __Trait_F_Vtable':'struct __Trait_F_Vtable' cinit
// CHECK-NEXT: InitListExpr 0x{{[^ ]*}} <col:7, col:13> 'struct __Trait_F_Vtable'
// CHECK-NEXT: CStyleCastExpr 0x{{[^ ]*}} <col:7> 'int (*)(void *, int)' <BitCast>
// CHECK-NEXT: ImplicitCastExpr 0x{{[^ ]*}} <col:7> 'int (*)(int *, int)' <FunctionToPointerDecay> part_of_explicit_cast
// CHECK-NEXT: DeclRefExpr 0x{{[^ ]*}} <col:7> 'int (int *, int)' lvalue BSCMethod 0x{{[^ ]*}} 'foo' 'int (int *, int)'

int main() {
    int b = 2;
    G* p = &b;
    int a = p->foo(5);
    return 0;
}