clang/test/BSC/Negative/Coroutine/Other/RecursiveCall/recursive-async-call/recursive-async-call.cbs
// RUN: %clang %s -o %test.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// since it's a recursive call, we will get a segv if we run it.

// Test without serialization:
// RUN: %clang_cc1 -triple x86_64-unknown-unknown \
// RUN: -internal-externc-isystem /usr/include/x86_64-linux-gnu \
// RUN: -internal-externc-isystem /include -internal-externc-isystem /usr/include -ast-dump %s \
// RUN: | FileCheck --strict-whitespace %s
//
// Test with serialization:
// RUN: %clang_cc1 -triple x86_64-unknown-unknown \
// RUN: -internal-externc-isystem /usr/include/x86_64-linux-gnu \
// RUN: -internal-externc-isystem /include -internal-externc-isystem /usr/include -emit-pch -o %t %s
// RUN: %clang_cc1 -x bsc -triple x86_64-unknown-unknown \
// RUN: -internal-externc-isystem /usr/include/x86_64-linux-gnu \
// RUN: -internal-externc-isystem /include -internal-externc-isystem /usr/include -include-pch %t -ast-dump-all /dev/null \
// RUN: | sed -e "s/ <undeserialized declarations>//" -e "s/ imported//" \
// RUN: | FileCheck --strict-whitespace %s

#include "../../../async-func-read.hbs"

async int f() {
    int a = await f();
    return a;
}

// Make sure that function `__f` has body.
// CHECK: FunctionDecl 0x{{[^ ]*}} <col:1, col:11> col:11 used __f 'struct __FatPointer<int> (void)'
// CHECK-NEXT: CompoundStmt 0x{{[^ ]*}} <col:1, col:11>

int main() {
  struct __FatPointer<int> this = f();
  this.vtable->poll(this.data);
  this.vtable->free(this.data); 
  return 0;
}